--- a/style.css
+++ b/style.css
@@ -148,3 +148,26 @@ button[disabled] {
 }
 
 
+/* prog bar */
+.progress{
+    float:right;
+}
+
+.progress span{
+    position:relative;
+    top: -6px;
+}
+
+.bar-wrapper{
+    height:20px;
+    width:200px;
+    border:1px solid #000000;
+    display:inline-block;
+}
+
+.bar{
+    position:relative;
+    height:100%;
+    width:0px;
+    background-color:#000000
+}
